--- a/css/geral.css
+++ b/css/geral.css
@@ -15,7 +15,7 @@ body {
 
 
 #topo {
-    background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+    background: pink;
     color: white;
     text-align: center;
     padding: 30px 0;
